[project]
name = "combine-video-image"
version = "1.0.0"
description = "Combine video and image assets into a single video"
requires-python = ">=3.11,<3.14"
dependencies = [
    "opencv-python>=4.10.0",
    "numpy>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
